# magha-cloud-secure

./: .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: schemas.py
backend/app/routes/: auth.py  files.py  storage.py
backend/app/utils/: encryption.py  security.py
frontend/: dashboard.html  login.html  mission.html  register.html  security.html
frontend-app/: index.html  package-lock.json  package.json
frontend-app/src/: App.tsx
frontend-app/src/contexts/: AuthContext.tsx
frontend-app/src/pages/: DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend-app/src/services/: api.ts
frontend/css/: style.css
frontend/js/: auth.js  dashboard.js  files.js
